Finalizing code (Marawan)
we were together Marawan wrote the code to begin finalizing

--- a/untitled/login.ui
+++ b/untitled/login.ui
@@ -71,6 +71,9 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="OnLoginButton">
    <property name="geometry">
