--- a/untitled/user.ui
+++ b/untitled/user.ui
@@ -36,19 +36,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="SearchUpdate">
-   <property name="geometry">
-    <rect>
-     <x>227</x>
-     <y>20</y>
-     <width>171</width>
-     <height>191</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QPushButton" name="SearchButton">
    <property name="geometry">
     <rect>
@@ -60,42 +47,6 @@
    </property>
    <property name="text">
     <string>Search for Article</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="ViewArticlesButton">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>50</y>
-     <width>131</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>View articles</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="ViewArticleslineEdit">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>50</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="viewarticlesupdate">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>90</y>
-     <width>131</width>
-     <height>101</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="latestarticlesButton">
@@ -111,24 +62,11 @@
     <string>View latest articles</string>
    </property>
   </widget>
-  <widget class="QLabel" name="latestarticlesupdate">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>120</y>
-     <width>241</width>
-     <height>201</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="ArticleRatinglineEdit">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>180</y>
+     <y>300</y>
      <width>113</width>
      <height>21</height>
     </rect>
@@ -157,19 +95,6 @@
     <string>Rate</string>
    </property>
   </widget>
-  <widget class="QLabel" name="RateUpdate">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>170</y>
-     <width>171</width>
-     <height>241</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QPushButton" name="SaveButton">
    <property name="geometry">
     <rect>
@@ -183,12 +108,64 @@
     <string>Save To file</string>
    </property>
   </widget>
-  <widget class="QLabel" name="SaveUpdate">
+  <widget class="QLabel" name="searchupdate">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>420</y>
-     <width>58</width>
+     <x>280</x>
+     <y>60</y>
+     <width>181</width>
+     <height>191</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="viewarticlesupdate">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>90</y>
+     <width>181</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="viewlatestupdate">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>150</y>
+     <width>191</width>
+     <height>161</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="rateupdate">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>280</y>
+     <width>151</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="saveupdate">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>410</y>
+     <width>231</width>
      <height>16</height>
     </rect>
    </property>
